# meta_hack

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  FULL_PROJECT_DOCUMENTATION.md  HF_MINI_BLOG_DRAFT.md  JUDGES_GUIDE.md  README.md  SCORING_ANALYSIS.md  SUBMISSION_READY.md  VALIDATION_CHECKLIST.md  app.py  conftest.py  inference.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  run_training_space.sh  test_output_format.py  train_grpo.py  validate-submission.sh
__pycache__/: app.cpython-314.pyc.2040483553296  inference.cpython-314.pyc.2040483553936
colab/: PR_Review_GRPO_Training.ipynb
demo/: PR_Review_GRPO_Kaggle.ipynb
fixtures/: pr_easy.json  pr_easy_002.json  pr_easy_003.json  pr_easy_004.json  pr_easy_005.json  pr_easy_006.json  pr_easy_007.json  pr_easy_008.json  pr_easy_009.json  pr_easy_010.json  pr_easy_011.json  pr_easy_012.json  pr_easy_013.json  pr_easy_014.json  pr_easy_015.json  pr_easy_016.json  pr_easy_017.json  pr_easy_018.json  pr_easy_019.json  pr_easy_020.json  pr_easy_021.json  pr_easy_022.json  pr_easy_023.json  pr_easy_024.json  pr_easy_025.json  pr_easy_026.json  pr_easy_027.json  pr_easy_028.json  pr_easy_029.json  pr_easy_030.json  pr_hard.json  pr_hard_002.json  pr_hard_003.json  pr_hard_004.json  pr_hard_005.json  pr_hard_006.json  pr_hard_007.json  pr_hard_008.json  pr_hard_009.json  pr_hard_010.json  (+60 more)
pr_review_env/: __init__.py  env.py  models.py  reward.py
pr_review_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+19 files in other folders)
