[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-review-env"
version = "1.0.0"
description = "Deterministic pull request code review triage environment for OpenEnv"
authors = [
    { name = "Meta Infra Tooling" }
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.4",
    "openai==1.35.10",
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openenv", "code-review", "triage", "benchmarking"]

[project.optional-dependencies]
dev = [
    "pytest",
    "openenv-core",
]

[tool.setuptools]
packages = ["pr_review_env", "pr_review_env.tasks"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
